--- a/frontend/src/components/Footer/Footer.css
+++ b/frontend/src/components/Footer/Footer.css
@@ -1,26 +1,33 @@
 .footer-container {
     background-color: rgb(244, 244, 244);
-    width: 100%;
-    height: 500 px;
+    width: 100vw;
+    height: 500px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     font-size: 14px;
-    color: rgb(117, 114, 128);
+    color: #757280;
+    font-family: 'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif;
+    padding: 75px 0px;
+
 }
 
 .top-footer {
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
+    height: 385px;
+    width: 1144px;
+    margin: 0px 660px
 }
 
 .column-container {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    /* align-items: center; */
+    width: 262px;
 }
 
 .footer-titles {
@@ -28,4 +35,18 @@
     font-weight: 700;
     line-height: 22px;
     color: black;
+    line-height: 22px;
+}
+
+.ul-style {
+    list-style-type: none;
+    line-height: 1.1;
+}
+
+.higher {
+    justify-content: flex-start;
+}
+
+.lineheight {
+    /* line-height: 50px; */
 }
