--- a/frontend/src/components/BrowseBusinesses/BrowseBusiness.css
+++ b/frontend/src/components/BrowseBusinesses/BrowseBusiness.css
@@ -67,4 +67,17 @@
 .location-cities {
     color: rgb(211, 35, 35);
     font-size: 21px;
+    font-weight: 700;
+    text-align: center;
+}
+
+.cities {
+    display: flex;
+    justify-content: space-around;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 30px;
+    color: rgb(102, 102, 102);
+
+
 }
