--- a/frontend/src/components/Footer/Footer.css
+++ b/frontend/src/components/Footer/Footer.css
@@ -19,7 +19,8 @@
     align-items: flex-start;
     height: 385px;
     width: 1144px;
-    margin: 0px 660px
+    margin: 0px 660px;
+    margin-bottom: 20px;
 }
 
 .column-container {
@@ -35,12 +36,12 @@
     font-weight: 700;
     line-height: 22px;
     color: black;
-    line-height: 22px;
+    line-height: 40px;
 }
 
 .ul-style {
     list-style-type: none;
-    line-height: 1.1;
+    line-height: 2.5;
 }
 
 .higher {
@@ -49,4 +50,18 @@
 
 .lineheight {
     /* line-height: 50px; */
+}
+
+.lower-footer {
+    font-size: 18px;
+    font-weight: 500;
+}
+
+.github-link {
+    text-decoration: none;
+    color: #757280;
+}
+
+.github-link:hover {
+    text-decoration: underline;
 }
