--- a/frontend/src/components/BrowseBusinesses/BrowseBusiness.css
+++ b/frontend/src/components/BrowseBusinesses/BrowseBusiness.css
@@ -6,7 +6,7 @@
 
 
 .searchbar-container {
-    
+
     background-image: url(https://s3-media0.fl.yelpcdn.com/assets/srv0/yelp_large_assets/65e6a224ada4/assets/img/home/hero_photos/cz8iYo13MpBBGlFLlkA8Sw.jpg);
     height: 570px;
 }
@@ -43,6 +43,7 @@
     margin-bottom: 10px;
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
+    z-index: 1;
 }
 
 .new-businesses {
