--- a/frontend/src/components/SignupFormPage/SignupForm.css
+++ b/frontend/src/components/SignupFormPage/SignupForm.css
@@ -25,7 +25,7 @@
     width: 495px;
 }
 
-.signup-btn {
+.front-signup-btn {
     box-sizing: border-box;
     height: 41px;
     width: 300px;
@@ -36,6 +36,12 @@
     color: white;
     border-radius: 3px;
     font-weight: 700;
+    transition: 0.5s;
+}
+
+.front-signup-btn:hover {
+    background-color: rgb(218, 52, 52);
+    border: 1px solid rgb(218, 52, 52);
 }
 
 .signup-page-container {
@@ -49,14 +55,14 @@
 .signup-img {
     height: 342px;
     width: 382px;
-    margin-top: 75px;
+    margin-top: 200px;
 }
 
 .signup-input {
     height: 30px;
     width: 300px;
     padding: 5px 9px;
-    margin-bottom: 9px;
+    margin-bottom: 15px;
 
 }
 
@@ -88,7 +94,7 @@
 
 .apple {
     background-color: black;
-    margin-bottom: 1px;
+    margin-bottom: 25px;
     border: 1px solid black);
 }
 
@@ -97,11 +103,15 @@
     font-size: 22px;
     font-weight: 700;
     line-height: 17.99px;
+    margin-bottom: 15px;
+
 }
 
 .signup-subheading {
     font-size: 14px;
     font-weight: 700;
+    margin-bottom: 10px;
+
 }
 
 .signup-legal {
