--- a/frontend/src/components/LoginFormPage/Login.css
+++ b/frontend/src/components/LoginFormPage/Login.css
@@ -25,7 +25,7 @@
     width: 495px;
 }
 
-.signup-btn {
+.user-login-btn {
     box-sizing: border-box;
     height: 41px;
     width: 300px;
@@ -36,7 +36,15 @@
     color: white;
     border-radius: 3px;
     font-weight: 700;
+    transition: 0.5s;
+    margin-bottom: 15px;
 }
+
+.user-login-btn:hover {
+    background-color: rgb(218, 52, 52);
+    border: 1px solid rgb(218, 52, 52);
+}
+
 
 .signup-page-container {
     display: flex;
@@ -49,14 +57,14 @@
 .signup-img {
     height: 342px;
     width: 382px;
-    margin-top: 75px;
+    margin-top: 200px;
 }
 
 .signup-input {
     height: 30px;
     width: 300px;
     padding: 5px 9px;
-    margin-bottom: 9px;
+    margin-bottom: 15px;
 
 }
 
@@ -97,11 +105,13 @@
     font-size: 22px;
     font-weight: 700;
     line-height: 17.99px;
+    margin-bottom: 15px;
 }
 
 .signup-subheading {
     font-size: 14px;
     font-weight: 700;
+    margin-bottom: 10px;
 }
 
 .signup-legal {
@@ -109,6 +119,7 @@
     font-weight: 400;
     text-align: center;
     line-height: 18px;
+    margin-bottom: 10px;
 }
 
 .line {
@@ -121,6 +132,7 @@
 .or {
     color: #666;
     font-size: 15px;
+    margin-bottom: 10px;
 }
 
 .left-container {
