--- a/frontend/src/components/LoginFormPage/Login.css
+++ b/frontend/src/components/LoginFormPage/Login.css
@@ -29,8 +29,8 @@
     box-sizing: border-box;
     height: 41px;
     width: 300px;
-    background-color: rgb(211, 35, 35);
-    border: 1px solid rgb(211, 35, 35);
+    background-color: rgb(244, 57, 57);
+    border: 1px solid rgb(244, 57, 57);
     font-size: 16px;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     color: white;
@@ -38,6 +38,7 @@
     font-weight: 700;
     transition: 0.5s;
     margin-bottom: 15px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .user-login-btn:hover {
@@ -65,6 +66,9 @@
     width: 300px;
     padding: 5px 9px;
     margin-bottom: 15px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border: none;
+    border-radius: 4px;
 
 }
 
