--- a/frontend/src/components/SignupFormPage/SignupForm.css
+++ b/frontend/src/components/SignupFormPage/SignupForm.css
@@ -29,14 +29,17 @@
     box-sizing: border-box;
     height: 41px;
     width: 300px;
-    background-color: rgb(211, 35, 35);
-    border: 1px solid rgb(211, 35, 35);
+    background-color: rgb(244, 57, 57);
+    border: 1px solid rgb(244, 57, 57);
     font-size: 16px;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     color: white;
     border-radius: 3px;
     font-weight: 700;
     transition: 0.5s;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    margin-bottom: 10px;
+
 }
 
 .front-signup-btn:hover {
@@ -76,6 +79,8 @@
     border-radius: 3px;
     font-weight: 700;
     cursor: pointer;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
 
 }
 
