--- a/frontend/src/components/BusinessPage/BusinessPage.css
+++ b/frontend/src/components/BusinessPage/BusinessPage.css
@@ -11,6 +11,7 @@
     width: 100vw;
     overflow: hidden;
     position: relative;
+    margin-bottom: 30px;
 }
 .bp-image {
     width: 100vw;
@@ -27,6 +28,15 @@
     font-family: 'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif;
     font-size: 30px;
     font-weight: 700;
+    margin-bottom: 20px;
+}
+
+.b-description {
+    margin-bottom: 10px;
+}
+
+.b-location {
+    margin-bottom: 10px;
 }
 
 .r-container {
@@ -49,14 +59,12 @@
     margin-left: 20px;
     transition: 0.5s;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-
-
 }
 
 
 .review-edit {
     height: 30px;
-    width: 60px;
+    width: 80px;
     background-color: rgb(244, 57, 57);
     border: 1px solid rgb(244, 57, 57);
     padding: 8px 16px;
@@ -68,7 +76,7 @@
     text-decoration: none;
     margin-left: 20px;
     transition: 0.5s;
-    margin-right: 30px;
+    margin-right: 40px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 
 
@@ -76,7 +84,7 @@
 
 .review-delete {
     height: 30px;
-    width: 60px;
+    width: 80px;
     background-color: rgb(244, 57, 57);
     border: 1px solid rgb(244, 57, 57);
     padding: 8px 16px;
@@ -90,7 +98,7 @@
     transition: 0.5s;
     text-align: center;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-
+    text-align: center;
 
 }
 
@@ -107,7 +115,7 @@
     font-size: 16px;
     font-weight: 500;
     text-decoration: none;
-    margin-left: 20px;
+    margin-left: 40px;
     transition: 0.5s;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 
@@ -140,4 +148,26 @@
 .profile-btn {
     height: 40px;
     width: 40px;
+}
+
+.detail-container {
+    margin-left: 40px;
+    width: 747px;
+}
+
+.r-container {
+    border: none;
+    border-radius: 4px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    padding: 5px;
+    margin-bottom: 10px;
+    font-size: 14px;
+
+}
+.rating {
+    margin-bottom: 5px;
+}
+
+.content {
+    margin-bottom: 7px;
 }
