--- a/frontend/src/components/LoginFormPage/Login.css
+++ b/frontend/src/components/LoginFormPage/Login.css
@@ -101,7 +101,7 @@
 .apple {
     background-color: black;
     margin-bottom: 25px;
-    border: 1px solid black);
+    border: 1px solid black;
 }
 
 .signup-h2 {
