reworked project to use normalized state and proper react workflow

--- a/frontend/src/components/BrowseBusinesses/BrowseBusiness.css
+++ b/frontend/src/components/BrowseBusinesses/BrowseBusiness.css
@@ -146,3 +146,8 @@
     background-color: rgb(218, 52, 52);
     border: 1px solid rgb(218, 52, 52);
 }
+
+.noticeToLogIn {
+    display: flex;
+    justify-content: center;
+}
